# AdePT

./: .clang-format  .codespellrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AdePTConfig.cmake.in  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Jenkinsfile  README.md
CopCore/: CMakeLists.txt
CopCore/LICENSES/: CC-BY-4.0.txt  CC-BY-ND-4.0.txt  GPL-3.0-or-later.txt
examples/: CMakeLists.txt
examples/AsyncExample/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  AdeptIntegration.h  BasicScoring.cu  BasicScoring.h  CMakeLists.txt  CommonStruct.h  Histograms.h  README.md  ResourceManagement.cu  ResourceManagement.h  SlotManager.cuh  Track.cuh  TrackTransfer.h  electrons.cuh  example.cpp  gammas.cuh
examples/ECS/: CMakeLists.txt  CudaHelpers.h  Kernels.h  README.md  ecs.cu  ecs.h  mergeAndSortBlocks.cuh
examples/Example1/: CMakeLists.txt  example1.cpp  example1.cu
examples/Example10/: CMakeLists.txt  README.md  electrons.cu  example10.cpp  example10.cu  example10.cuh  example10.h  gammas.cu  relocation.cu
examples/Example11/: CMakeLists.txt  README.md  electrons.cu  example11.cpp  example11.cu  example11.cuh  gammas.cu
examples/Example12/: CMakeLists.txt  README.md  electrons.cu  example12.cpp  example12.cu  example12.cuh  example12.h  gammas.cu
examples/Example13/: CMakeLists.txt  README.md  electrons.cu  example13.cpp  example13.cu  example13.cuh  example13.h  gammas.cu
examples/Example14/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  AdeptIntegration.h  BasicScoring.cu  BasicScoring.h  CMakeLists.txt  CommonStruct.h  README.md  Track.cuh  electrons.cuh  gammas.cuh
examples/Example15/: CMakeLists.txt  electrons.cu  example15.cpp  example15.cu  example15.cuh  example15.h  gammas.cu
examples/Example16/: CMakeLists.txt  README.md  electrons.cu  example16.cpp  example16.cu  example16.cuh  example16.h  gammas.cu
examples/Example17/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  BasicScoring.cu  BasicScoring.h  CMakeLists.txt  README.md  Track.cuh  TrackData.h  electrons.cuh  example17.cpp  gammas.cuh
examples/Example18/: CMakeLists.txt  README.md  electrons.cu  example18.cpp  example18.cu  example18.cuh  example18.h  gammas.cu
examples/Example19/: CMakeLists.txt  README.md  electrons.cu  example.cuh  example.h  gammas.cu  main.cpp  main.cu
examples/Example1_OneAPI/: CMakeLists.txt  example1.cpp
examples/Example2/: CMakeLists.txt  IterationStats.h  example2.cpp  example2.cu  example2.h  initTracks.h
examples/Example20/: CMakeLists.txt  README.md  electrons.cu  example.cuh  example.h  gammas.cu  main.cpp  main.cu
examples/Example21/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.h  BasicScoring.h  CMakeLists.txt  CommonStruct.h  README.md  TrackData.h  electrons.cuh  example21.cpp  gammas.cuh
examples/Example22/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  AdeptIntegration.h  BasicScoring.cu  CMakeLists.txt  CommonStruct.h  HostScoring.cu  HostScoring.h  README.md  Track.cuh  TrackData.h  electrons.cuh  gammas.cuh
examples/Example23/: CMakeLists.txt  example23.cpp
examples/Example3/: CMakeLists.txt  Makefile  README.md  common.cc  common.cu  common.h  field.cc  field.cu  field.h  geometry.cc  geometry.cu  geometry.h  init.cc  init.cu  init.h  loop.cc  loop.cu  loop.h  main.cc  matrix.h  particle.cc  particle.cu  particle.h  physics.cc  physics.cu  physics.h  point.h  ppm.cc  ppm.cu  ppm.h  primitives.cc  primitives.cu  primitives.h  quaternion.h  random.cc  random.cu  random.h  raymarch.cc  raymarch.cu  render.cc  (+18 more)
examples/Example4/: CMakeLists.txt  createTracks.h  example4.cpp  example4.cu  example4.h
examples/Example5/: CMakeLists.txt  example5.cpp  example5.cu  example5.h
examples/Example6/: CMakeLists.txt  README.md  example6.cpp  example6.cu  example6.h
examples/Example7/: CMakeLists.txt  README.md  TestEm3.cu  TestEm3.cuh  TestEm3.h  electrons.cu  example7-adept.cc  example7-geant4.cc  example7-geometry.h  gammas.cu  geant4_mock.cc  geant4_mock.h  relocation.cu
examples/Example8/: CMakeLists.txt  README.md  example8.cpp  example8.cu  example8.h
examples/Example9/: CMakeLists.txt  README.md  electrons.cu  example9.cpp  example9.cu  example9.cuh  example9.h  gammas.cu  relocation.cu
examples/FisherPrice_Alpaka/: CMakeLists.txt  alpaka_fisher_price.cu  particle.h  particleProcessor.h  particleStack.h  unitTests_alpaka_fisher_price.cu
examples/FisherPrice_cpp/: CMakeLists.txt  fisher_price.cpp
examples/FisherPrice_cu/: CMakeLists.txt  cufisher_price.cu  cufisher_price_v2.cu
examples/IntegrationBenchmark/: CMakeLists.txt  integrationBenchmark.cpp
examples/Raytracer_Benchmark/: ArgParser.h  CMakeLists.txt  Color.h  LoopNavigator.h  Material.h  README.md  RaytraceBenchmark.cpp  RaytraceBenchmark.cu  RaytraceBenchmark.hpp  Raytracer.cpp  Raytracer.h  box_sphere.gdml  kernels.h
examples/TestEm3/: CMakeLists.txt  README.md  TestEm3.cpp  TestEm3.cu  TestEm3.cuh  TestEm3.h  electrons.cu  gammas.cu  relocation.cu
examples/TestEm3Compact/: CMakeLists.txt  README.md  TestEm3.cpp  TestEm3.cu  TestEm3.cuh  electrons.cu  gammas.cu
examples/TestEm3DoubleBuffer/: CMakeLists.txt  README.md  TestEm3.cpp  TestEm3.cu  TestEm3.cuh  TestEm3.h  electrons.cu  gammas.cu
examples/TestEm3MT/: CMakeLists.txt  README.md  TestEm3.cpp  TestEm3.cu  TestEm3.cuh  TestEm3.h  electrons.cu  gammas.cu
examples/data/: LHCb_Upgrade_onlyECALandHCAL.gdml  cms2018_sd.gdml.license  testEm3_wdt.gdml  (+4 more)
test/: CMakeLists.txt  ci_common.sh  cufisher_price.cu  cufisher_price_v2.cu  example_add.cu  executor_functions.h  fisher_price.cpp  run_ci_matrix.sh  run_nightly_ci.sh  run_pr_ci.sh  run_simulation.hpp  sim_kernels.h  test_Bfield_step_debugger.cpp  test_atomic.cu  test_copcore_link.cpp  test_executor.cpp  test_executor.cu  test_g4vg_link.cpp  test_launcher.cpp  test_launcher.cu  test_magfieldRK.cpp  test_queue.cu  test_ranluxpp.cu  test_sparsevector.cu  test_sparsevector_cpu.cpp  test_track_block.cu
(+798 files in other folders)
